# bobs-roleplaying

./: .gitignore
agents/: pyproject.toml
agents/src/agents/: runner.py
agents/src/agents/director/: __init__.py  graph.py  prompt.py  schema.py
agents/src/agents/director/schema/: intent_response_schema.json  intention_response_schema.json  question_response_schema.json  schema.py
agents/src/agents/player/: __init__.py  configuration.py  dto.py  graph.py  prompt.py  sample.py  schema.py  state.py  util.py
agents/src/agents/scriptwriter/: __init__.py  graph.py  prompt.py  schema.py
agents/src/agents/translator/: __init__.py  graph.py
agents/tests/: agent_test.py
app/: pyproject.toml
app/src/: db.py  main.py  schema.py  translation.py  tts.py
app/src/endpoints/: agents.py  api.py  auth.py  view.py
app/src/infra/: checkpointer.py  db.py  session.py
app/src/service/: acting_script_service.py  agent_service.py  audio_service.py  script_service.py
app/src/static/: directing.html  index.html  login.html  playing.html
app/src/static/css/: audio.css
app/src/static/html/: audio.html  directing.html  login.html  playing.html  sample.html
app/src/static/js/: audio.js
app/tutorial/: sample.py  vector_tutorial.py
docs/: prompt.md
server/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  pyproject.toml
server/src/server/: __init__.py  chat_gtts.py  db.py  main.py  query.py  schema.py  translation.py
server/src/server/static/: index.html  playing.html
server/src/server/tutorial/: sample.py  vector_tutorial.py
util/: pyproject.toml
util/src/util/: __init__.py  langchain.py  logging.py
