[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "bakpark",email = "bakparkbj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "langgraph-supervisor (>=0.0.9,<0.0.10)",
    "langchain-anthropic (>=0.3.9,<0.4.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "langgraph-checkpoint-sqlite (>=2.0.6,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "agents", from = "src"}]

[tool.poetry.dependencies]
python = "=3.11.11"
util = {path = "../util", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
