[project]
name = "util"
version = "0.1.0"
description = ""
authors = [
    {name = "bakpark",email = "bakparkbj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langchain-core (>=0.3.44,<0.4.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.7,<0.4.0)"
]

[tool.poetry]
packages = [{include = "util", from = "src"}]

[tool.poetry.dependencies]
python = "=3.11.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
